# packages/backend/openapi.json
@@ -1444,6 +1444,32 @@
         "tags": [
           "catalog"
         ]
+      },
+      "delete": {
+        "operationId": "CatalogController_deleteCard",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "x-api-key": []
+          }
+        ],
+        "tags": [
+          "catalog"
+        ]
       }
     },
     "/v1/catalog/card_reports/{id}": {
